[project]
name = "jax-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flax>=0.12.2",
    "ipykernel>=7.1.0",
    "jax[cuda13]>=0.8.2",
]

[dependency-groups]
dev = [
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
