[project]
name = "jax-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "distrax>=0.1.7",
    "fastparquet>=2025.12.0",
    "flax>=0.12.2",
    "grain>=0.2.15",
    "imageio[ffmpeg]>=2.37.2",
    "ipykernel>=7.1.0",
    "jax[cuda12]>=0.8.2",
    "matplotlib>=3.10.8",
    "mujoco==3.2.3",
    "mujoco-mjx==3.2.3",
    "pandas>=2.3.3",
    "pillow>=12.1.0",
    "playground>=0.0.1",
    "pyarrow>=22.0.0",
]
